<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="REGISTRARSE"
                android:textColor="#CC3C3C"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField1"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="match_parent"
            android:hint="@string/labelNombre">>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField2"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_height="match_parent"
                android:hint="@string/labelApellido">>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/btnGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:checkedButton="@+id/radio_button_1">

                <RadioButton
                    android:id="@+id/rbtMasculino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/labelMas" />

                <RadioButton
                    android:id="@+id/rbtFemenino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/labelFem" />
            </RadioGroup>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField3"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_height="match_parent"
                android:hint="@string/labelUsuario">>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUsuarioR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField4"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_height="match_parent"
                android:hint="@string/labelContrasena">>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtContrasenaR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="120dp"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/btnRegistrarR"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="REGISTRAR"
                    android:background="@drawable/boton_personalizado" />

                <Button
                    android:id="@+id/btnVolverR"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/boton_personalizado"
                    android:text="VOLVER" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>