<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Actualizar Menú"
                android:textAlignment="center"
                android:textColor="@color/botonGrabar"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtCodigoA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre :"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/labelNombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNombreA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Precio :"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/labelPrecio">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPrecioA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Seleccione Categoria :"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu1"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/labelCategoria">

                <AutoCompleteTextView
                    android:id="@+id/atvCategoriaA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="202dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingTop="50dp">

                    <Button
                        android:id="@+id/btnActualizarA"
                        android:layout_width="163dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/botonGrabar"
                        android:text="ACTUALIZAR"
                        app:cornerRadius="5dp"
                        app:icon="@drawable/save" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingTop="50dp">

                    <Button
                        android:id="@+id/btnEliminarA"
                        android:layout_width="162dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/botonSalir"
                        android:text="Eliminar"
                        app:cornerRadius="5dp"
                        app:icon="@drawable/undo" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnSalirA"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="SALIR" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>